--- a/testing-ace/myStyle.css
+++ b/testing-ace/myStyle.css
@@ -1,16 +1,19 @@
 @charset "UTF-8";
+
 #editorContainer {
-    width: 100%;
-    height: 100px;
-    position: relative;
-    background-color: red;
+	width: 100%;
+	height: 100px;
+	position: relative;
 }
-#editor { 
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+
+#editor {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	border-radius: 10px;
+	border: 1px solid #000000;
 }
 
 p {
